GSDO-1077-Image Component- Caption alignment issues for both gsusa and girlscouts

--- a/web/app/src/main/content/jcr_root/apps/girlscouts/components/image/clientlibs/image.css
+++ b/web/app/src/main/content/jcr_root/apps/girlscouts/components/image/clientlibs/image.css
@@ -9,21 +9,24 @@ div.image img {
 div.image small {
     display: block;
 }
-.image-right img {
+.image-right {
 	float: right;    
  	margin: 0 0 0 15px;
 }
 
-.image-left img {
+.image-left {
 	float: left;    
  	margin: 0 15px 0 0;
 }
 
-.image-center img {
+.image-center {
  	display: block;
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+    width:-moz-fit-content;
+    width:-webkit-fit-content;
+    width:-ms-fit-content;
     max-width: 50%;
 }
 
@@ -51,4 +54,9 @@ div.image.right div.img-wrapper {
 	display: block;
 	margin: 0;
 	margin-left: auto
+}
+
+.image-caption small {
+	padding: 0;
+    line-height: 1.09rem;
 }
